# search-box

./: .gitignore  AGENTS.md  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  cli.py  examples.py  main.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: ASSESSMENT.md  INTEGRATION.md  ROADMAP.md
docs/api/: README.md
docs/development/: README.md
docs/security/: README.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
scripts/: check.sh
search_box/: __init__.py  base.py  cache.py  server.py
search_box/providers/: __init__.py  duckduckgo.py  searxng.py
tests/: conftest.py  test_base.py  test_cache.py  test_providers.py
